--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Header -->
   <header class="bg-white shadow">
     <div class="max-w-7xl mx-auto px-4 py-6 flex justify-between items-center">
-      <img src="Logo de KAPTA Recursos Estratégicos.png" alt="Logo de KAPTA" class="h-12">
+      <img src="logo-kapta.png" alt="Logo de KAPTA" class="h-12">
       <nav class="space-x-6">
         <a href="#inicio" class="text-gray-700 hover:text-blue-600">Inicio</a>
         <a href="#nosotros" class="text-gray-700 hover:text-blue-600">Nosotros</a>
@@ -42,7 +42,7 @@
           <p>Brindar soluciones de reclutamiento a medida, centradas en el desarrollo del talento, con altos estándares de calidad, transparencia y compromiso.</p>
 
           <h3 class="text-xl font-semibold mt-6 mb-2">Visión</h3>
-          <p>Convertirnos en la plataforma más confiable y eficiente en la vinculación de talento con empresas en crecimiento.</p>
+          <p>Convertirnos en la empresa más confiable y eficiente en la vinculación de talento en México con empresas en crecimiento.</p>
 
           <h3 class="text-xl font-semibold mt-6 mb-2">Valores</h3>
           <ul class="list-disc list-inside">
@@ -113,11 +113,15 @@
     <div class="max-w-3xl mx-auto px-4 text-center">
       <h2 class="text-3xl font-bold mb-6">¿Quieres formar parte de nuestro equipo?</h2>
       <p class="mb-6">Estamos en búsqueda constante de personas apasionadas por el desarrollo humano y organizacional. Envíanos tu información y nos pondremos en contacto contigo.</p>
-      <form class="space-y-4">
-        <input type="text" placeholder="Nombre completo" class="w-full p-3 border border-gray-300 rounded">
-        <input type="email" placeholder="Correo electrónico" class="w-full p-3 border border-gray-300 rounded">
-        <input type="text" placeholder="Teléfono" class="w-full p-3 border border-gray-300 rounded">
-        <textarea placeholder="Cuéntanos por qué te interesa unirte a KAPTA" rows="4" class="w-full p-3 border border-gray-300 rounded"></textarea>
+      <form action="https://formsubmit.co/kaptarecursosestrategicos@gmail.com" method="POST" class="space-y-4">
+        <input type="text" name="Nombre completo" placeholder="Nombre completo" class="w-full p-3 border border-gray-300 rounded" required>
+        <input type="email" name="Correo electrónico" placeholder="Correo electrónico" class="w-full p-3 border border-gray-300 rounded" required>
+        <input type="text" name="Teléfono" placeholder="Teléfono" class="w-full p-3 border border-gray-300 rounded" required>
+        <textarea "Mensaje" placeholder="Cuéntanos por qué te interesa unirte a KAPTA" rows="4" class="w-full p-3 border border-gray-300 rounded" required></textarea>
+
+        <input type="hidden" name="_next" value="https://kapta.github.io/gracias.html">
+        <input type="hidden" name="_captcha" value="false">
+
         <button type="submit" class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700">Enviar</button>
       </form>
     </div>
@@ -127,12 +131,16 @@
   <section id="contacto" class="py-16 bg-white">
     <div class="max-w-xl mx-auto px-4">
       <h2 class="text-3xl font-bold mb-6 text-center">Contáctanos</h2>
-      <form class="space-y-4">
-        <input type="text" placeholder="Nombre" class="w-full p-3 border border-gray-300 rounded">
-        <input type="email" placeholder="Correo Electrónico" class="w-full p-3 border border-gray-300 rounded">
-        <textarea placeholder="Mensaje" rows="4" class="w-full p-3 border border-gray-300 rounded"></textarea>
-        <button type="submit" class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700">Enviar</button>
-      </form>
+      <form action="https://formsubmit.co/kaptarecursosestrategicos@gmail.com" method="POST" class="space-y-4">
+      <input type="text" name="Nombre" placeholder="Nombre" class="w-full p-3 border border-gray-300 rounded" required>
+      <input type="email" name="Correo Electrónico" placeholder="Correo Electrónico" class="w-full p-3 border border-gray-300 rounded" required>
+      <textarea name="Mensaje" placeholder="Mensaje" rows="4" class="w-full p-3 border border-gray-300 rounded" required></textarea>
+
+  <input type="hidden" name="_next" value="https://kapta.github.io/gracias.html">
+  <input type="hidden" name="_captcha" value="false">
+
+  <button type="submit" class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700">Enviar</button>
+</form>
     </div>
   </section>
 
