--- a/index.html
+++ b/index.html
@@ -114,35 +114,35 @@
       <h2 class="text-3xl font-bold mb-6">¿Quieres formar parte de nuestro equipo?</h2>
       <p class="mb-6">Estamos en búsqueda constante de personas apasionadas por el desarrollo humano y organizacional. Envíanos tu información y nos pondremos en contacto contigo.</p>
       <form action="https://formsubmit.co/kaptarecursosestrategicos@gmail.com" method="POST" class="space-y-4">
-        <input type="text" name="Nombre completo" placeholder="Nombre completo" class="w-full p-3 border border-gray-300 rounded" required>
-        <input type="email" name="Correo electrónico" placeholder="Correo electrónico" class="w-full p-3 border border-gray-300 rounded" required>
-        <input type="text" name="Teléfono" placeholder="Teléfono" class="w-full p-3 border border-gray-300 rounded" required>
-        <textarea "Mensaje" placeholder="Cuéntanos por qué te interesa unirte a KAPTA" rows="4" class="w-full p-3 border border-gray-300 rounded" required></textarea>
-
-        <input type="hidden" name="_next" value="https://kapta.github.io/gracias.html">
-        <input type="hidden" name="_captcha" value="false">
-
-        <button type="submit" class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700">Enviar</button>
-      </form>
+        <input type="text" name="name" placeholder="Nombre completo" class="w-full p-3 border border-gray-300 rounded" required>
+        <input type="email" name="email" placeholder="Correo electrónico" class="w-full p-3 border border-gray-300 rounded" required>
+        <input type="text" name="phone" placeholder="Teléfono" class="w-full p-3 border border-gray-300 rounded">
+        <textarea name="message" placeholder="Cuéntanos por qué te interesa unirte a KAPTA" rows="4" class="w-full p-3 border border-gray-300 rounded"></textarea>
+        <input type="hidden" name="_next" value="https://tuusuario.github.io/gracias.html">
+  <button type="submit" class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700">Enviar</button>
+</form>
     </div>
   </section>
 
   <!-- Contacto -->
   <section id="contacto" class="py-16 bg-white">
-    <div class="max-w-xl mx-auto px-4">
-      <h2 class="text-3xl font-bold mb-6 text-center">Contáctanos</h2>
-      <form action="https://formsubmit.co/kaptarecursosestrategicos@gmail.com" method="POST" class="space-y-4">
-      <input type="text" name="Nombre" placeholder="Nombre" class="w-full p-3 border border-gray-300 rounded" required>
-      <input type="email" name="Correo Electrónico" placeholder="Correo Electrónico" class="w-full p-3 border border-gray-300 rounded" required>
-      <textarea name="Mensaje" placeholder="Mensaje" rows="4" class="w-full p-3 border border-gray-300 rounded" required></textarea>
+  <div class="max-w-xl mx-auto px-4">
+    <h2 class="text-3xl font-bold mb-6 text-center">Contáctanos</h2>
+    <form action="https://formsubmit.co/kaptarecursosestrategicos@gmail.com" method="POST" class="space-y-4">
+      <input type="text" name="name" placeholder="Nombre" class="w-full p-3 border border-gray-300 rounded" required>
+      <input type="email" name="email" placeholder="Correo Electrónico" class="w-full p-3 border border-gray-300 rounded" required>
+      <textarea name="message" placeholder="Mensaje" rows="4" class="w-full p-3 border border-gray-300 rounded" required></textarea>
 
-  <input type="hidden" name="_next" value="https://kapta.github.io/gracias.html">
-  <input type="hidden" name="_captcha" value="false">
+      <!-- Puedes personalizar el siguiente campo para redirigir a una página de agradecimiento -->
+      <input type="hidden" name="_next" value="https://kaptarecursosestrategicos.github.io/gracias.html">
 
-  <button type="submit" class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700">Enviar</button>
-</form>
-    </div>
-  </section>
+      <!-- Evitar SPAM -->
+      <input type="hidden" name="_captcha" value="false">
+
+      <button type="submit" class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700">Enviar</button>
+    </form>
+  </div>
+</section>
 
   <!-- Footer -->
   <footer class="bg-gray-800 text-white text-center py-6">
