--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Header -->
   <header class="bg-white shadow">
     <div class="max-w-7xl mx-auto px-4 py-6 flex justify-between items-center">
-      <img src="logo-kapta.png" alt="Logo de KAPTA" class="h-12">
+      <img src="assets/logo-kapta.png" alt="Logo de KAPTA" class="h-12">
       <nav class="space-x-6">
         <a href="#inicio" class="text-gray-700 hover:text-blue-600">Inicio</a>
         <a href="#nosotros" class="text-gray-700 hover:text-blue-600">Nosotros</a>
