--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <input type="email" name="email" placeholder="Correo electrónico" class="w-full p-3 border border-gray-300 rounded" required>
         <input type="text" name="phone" placeholder="Teléfono" class="w-full p-3 border border-gray-300 rounded">
         <textarea name="message" placeholder="Cuéntanos por qué te interesa unirte a KAPTA" rows="4" class="w-full p-3 border border-gray-300 rounded"></textarea>
-        <input type="hidden" name="_next" value="https://tuusuario.github.io/gracias.html">
+        <input type="hidden" name="_next" value="https://kaptarecursosestrategicos.github.io/gracias.html">
   <button type="submit" class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700">Enviar</button>
 </form>
     </div>
