--- a/gracias.html
+++ b/gracias.html
@@ -5,9 +5,19 @@
   <title>Gracias</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 text-center py-20">
-  <h1 class="text-4xl font-bold text-blue-700">¡Gracias por tu mensaje!</h1>
-  <p class="mt-4 text-lg text-gray-700">Nos pondremos en contacto contigo muy pronto.</p>
-  <a href="index.html" class="mt-6 inline-block text-blue-600 hover:underline">Volver al inicio</a>
+<body class="bg-gray-50 flex flex-col items-center justify-center h-screen text-center px-4">
+
+  <!-- Logo -->
+  <img src="assets/logo-kapta.png.png" alt="Logo de KAPTA" class="h-24 mb-6">
+
+  <!-- Mensaje de agradecimiento -->
+  <h1 class="text-3xl font-bold text-gray-800 mb-4">¡Gracias por tu mensaje!</h1>
+  <p class="text-lg text-gray-600 mb-6">Hemos recibido tu información correctamente. Nos pondremos en contacto contigo a la brevedad.</p>
+
+  <!-- Botón para volver al inicio -->
+  <a href="index.html" class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700 transition">
+    Volver al inicio
+  </a>
+
 </body>
 </html>
