--- a/gracias.html
+++ b/gracias.html
@@ -2,22 +2,16 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gracias</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-50 flex flex-col items-center justify-center h-screen text-center px-4">
-
-  <!-- Logo -->
-  <img src="assets/logo-kapta.png.png" alt="Logo de KAPTA" class="h-24 mb-6">
-
-  <!-- Mensaje de agradecimiento -->
-  <h1 class="text-3xl font-bold text-gray-800 mb-4">¡Gracias por tu mensaje!</h1>
-  <p class="text-lg text-gray-600 mb-6">Hemos recibido tu información correctamente. Nos pondremos en contacto contigo a la brevedad.</p>
-
-  <!-- Botón para volver al inicio -->
-  <a href="index.html" class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700 transition">
-    Volver al inicio
-  </a>
-
+<body class="bg-white text-gray-800 font-sans flex items-center justify-center h-screen">
+  <div class="text-center px-6">
+    <img src="assets/logo-kapta.png.png" alt="Logo KAPTA" class="mx-auto mb-6 w-32">
+    <h1 class="text-3xl font-bold mb-4 text-blue-700">¡Gracias por contactarnos!</h1>
+    <p class="text-lg mb-6">Hemos recibido tu información. Muy pronto nos pondremos en contacto contigo.</p>
+    <a href="index.html" class="text-blue-600 hover:underline">Volver al sitio</a>
+  </div>
 </body>
 </html>
