--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   <button type="submit" class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700">Enviar</button>
 </form>
     </div>
-  </section>
+  </section>-->
 
   <!-- Contacto -->
   <section id="contacto" class="py-16 bg-white">
